@@ -7,7 +7,9 @@ Changelog
 - Fix soundcloud provider which can use https
 - Add screenr provider
 - Add test view endpoints_test_view only available with provided buildout
-
+- Add responsive behavior to oembed photo type provider, and video embed
+  and object type
+- Add itunes.apple.com support (iphone app)
 
 1.2.4 (2013-01-02)
 ------------------
